complete database input

--- a/05_Put_Data_In_Database.ipynb
+++ b/05_Put_Data_In_Database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -59,71 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "artist_id                                                                  NaN\n",
-       "artist_name                                     David Chen and Joanna Robinson\n",
-       "artist_view_url                                                            NaN\n",
-       "artwork_url100               http://is1.mzstatic.com/image/thumb/Music/v4/0...\n",
-       "artwork_url30                http://is1.mzstatic.com/image/thumb/Music/v4/0...\n",
-       "artwork_url60                http://is1.mzstatic.com/image/thumb/Music/v4/0...\n",
-       "artwork_url600               http://is1.mzstatic.com/image/thumb/Music/v4/0...\n",
-       "collection_censored_name           A Cast of Kings - A Game of Thrones Podcast\n",
-       "collection_explicitness                                               explicit\n",
-       "collection_hd_price                                                          0\n",
-       "collection_id                                                        515836681\n",
-       "collection_name                    A Cast of Kings - A Game of Thrones Podcast\n",
-       "collection_price                                                             0\n",
-       "collection_view_url          https://itunes.apple.com/us/podcast/cast-kings...\n",
-       "content_advisory_rating                                               Explicit\n",
-       "country                                                                    USA\n",
-       "currency                                                                   USD\n",
-       "feed_url                               http://feeds.feedburner.com/castofkings\n",
-       "genre_ids                                                           [1309, 26]\n",
-       "genres                                                   [TV & Film, Podcasts]\n",
-       "id                                                                          12\n",
-       "kind                                                                   podcast\n",
-       "primary_genre_name                                                   TV & Film\n",
-       "radio_station_url              https://itunes.apple.com/station/idra.515836681\n",
-       "release_date                                              2015-12-10T08:34:00Z\n",
-       "track_censored_name                A Cast of Kings - A Game of Thrones Podcast\n",
-       "track_count                                                                 20\n",
-       "track_explicitness                                                    explicit\n",
-       "track_hd_price                                                               0\n",
-       "track_hd_rental_price                                                        0\n",
-       "track_id                                                           5.15837e+08\n",
-       "track_name                         A Cast of Kings - A Game of Thrones Podcast\n",
-       "track_price                                                                  0\n",
-       "track_rental_price                                                           0\n",
-       "track_view_url               https://itunes.apple.com/us/podcast/cast-kings...\n",
-       "wrapper_type                                                             track\n",
-       "also_subscribed              [508647267, 544599736, 435853369, 515824283, 2...\n",
-       "podcast_summary              A quasiweekly discussion of the plots themes a...\n",
-       "language                                                               English\n",
-       "clean_episode_description    [In this episode of A Cast of Kings Joanna and...\n",
-       "clean_episode_name           [A Cast of Kings  Fire and Blood,  A Cast of K...\n",
-       "Name: 0, dtype: object"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "thisPod = podcastDf.iloc[0]\n",
-    "thisPod"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -136,17 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# insert podcast data into podcast table\n",
-    "query = \"INSERT INTO podcast (artwork_url30, artwork_url60, artwork_url100, artwork_url600, explicit, name, view_url, summary) VALUES (%s, %s, %s, %s, %s, %s, %s, %s) RETURNING id;\"\n",
+    "query = \"INSERT INTO podcast (artwork_url30, artwork_url60, artwork_url100, artwork_url600, explicit, name, view_url, summary, episode_descriptions, episode_names) VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s, %s) RETURNING id;\"\n",
     "podcast_id = []\n",
     "for ind, thisPod in podcastDf.iterrows():\n",
-    "    data = (thisPod['artwork_url30'], thisPod['artwork_url60'], thisPod['artwork_url100'], thisPod['artwork_url600'], thisPod['content_advisory_rating'], thisPod['collection_censored_name'], thisPod['collection_view_url'], thisPod['podcast_summary'])\n",
+    "    data = (thisPod['artwork_url30'], thisPod['artwork_url60'], thisPod['artwork_url100'], thisPod['artwork_url600'], thisPod['content_advisory_rating'], thisPod['collection_censored_name'], thisPod['collection_view_url'], thisPod['podcast_summary'], thisPod['clean_episode_description'], thisPod['clean_episode_name'])\n",
     "    cursor.execute(query, data)\n",
     "    podcast_id.append(cursor.fetchone()[0])\n",
     "    \n",
@@ -156,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -167,7 +103,7 @@
        "(4863, 2)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -200,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -217,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -237,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -248,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -264,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -275,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -291,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -302,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -318,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -334,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -345,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -365,27 +301,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>6177</td>\n",
+       "      <td>12349</td>\n",
        "      <td>515836681</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>6178</td>\n",
+       "      <td>12350</td>\n",
        "      <td>126723118</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>6179</td>\n",
+       "      <td>12351</td>\n",
        "      <td>699748055</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>6180</td>\n",
+       "      <td>12352</td>\n",
        "      <td>80693391</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>6181</td>\n",
+       "      <td>12353</td>\n",
        "      <td>579605641</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -394,14 +330,14 @@
       ],
       "text/plain": [
        "   podcast_id  collection_id\n",
-       "0        6177      515836681\n",
-       "1        6178      126723118\n",
-       "2        6179      699748055\n",
-       "3        6180       80693391\n",
-       "4        6181      579605641"
+       "0       12349      515836681\n",
+       "1       12350      126723118\n",
+       "2       12351      699748055\n",
+       "3       12352       80693391\n",
+       "4       12353      579605641"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -424,86 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>also_subscribed</th>\n",
-       "      <th>initial_podcast_id</th>\n",
-       "      <th>podcast_id</th>\n",
-       "      <th>collection_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>850161954</td>\n",
-       "      <td>6179</td>\n",
-       "      <td>6652</td>\n",
-       "      <td>850161954</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>850161954</td>\n",
-       "      <td>9712</td>\n",
-       "      <td>6652</td>\n",
-       "      <td>850161954</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>850161954</td>\n",
-       "      <td>10425</td>\n",
-       "      <td>6652</td>\n",
-       "      <td>850161954</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>850161954</td>\n",
-       "      <td>11251</td>\n",
-       "      <td>6652</td>\n",
-       "      <td>850161954</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>625691922</td>\n",
-       "      <td>6179</td>\n",
-       "      <td>6957</td>\n",
-       "      <td>625691922</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   also_subscribed  initial_podcast_id  podcast_id  collection_id\n",
-       "0        850161954                6179        6652      850161954\n",
-       "1        850161954                9712        6652      850161954\n",
-       "2        850161954               10425        6652      850161954\n",
-       "3        850161954               11251        6652      850161954\n",
-       "4        625691922                6179        6957      625691922"
-      ]
-     },
-     "execution_count": 150,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "also_subscribed.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
