--- a/05_Put_Data_In_Database.ipynb
+++ b/05_Put_Data_In_Database.ipynb
@@ -376,6 +376,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# pkl dfs\n",
+    "podcastDf.to_pickle('pkl/podcastDf_with_sql_id.pkl')\n",
+    "artistDf.to_pickle('pkl/artistDf_with_sql_id.pkl')\n",
+    "genreDf.to_pickle('pkl/genreDf_with_sql_id.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
