--- a/Setup_Simserver.ipynb
+++ b/Setup_Simserver.ipynb
@@ -24,33 +24,13 @@
    },
    "outputs": [],
    "source": [
-    "server = SessionServer('/Users/lindsay/Documents/Data Science/Insight/Project/simserver')"
+    "#server = SessionServer('/Users/lindsay/Documents/Data Science/Insight/Project/simserver')\n",
+    "server = SessionServer('simserver/')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MmCorpus(5804 documents, 51857 features, 4368165 non-zero entries)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# load the current corpus\n",
-    "local_corpus = corpora.MmCorpus('gensim/corpus_tfidf.mm')\n",
-    "print(local_corpus)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -62,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -75,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -83,6 +63,40 @@
    "source": [
     "# upload corpus to server\n",
     "utils.upload_chunked(server, corpus, chunksize=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:sqlitedict:failed to delete /var/folders/hg/kw83c_j57xqd055hr739mhvm0000gn/T/sqldictaaaad\n",
+      "Traceback (most recent call last):\n",
+      "  File \"//anaconda/lib/python2.7/site-packages/sqlitedict.py\", line 283, in terminate\n",
+      "    os.remove(self.filename)\n",
+      "OSError: [Errno 2] No such file or directory: '/var/folders/hg/kw83c_j57xqd055hr739mhvm0000gn/T/sqldictaaaad'\n",
+      "ERROR:sqlitedict:failed to delete /var/folders/hg/kw83c_j57xqd055hr739mhvm0000gn/T/sqldict27aa32\n",
+      "Traceback (most recent call last):\n",
+      "  File \"//anaconda/lib/python2.7/site-packages/sqlitedict.py\", line 283, in terminate\n",
+      "    os.remove(self.filename)\n",
+      "OSError: [Errno 2] No such file or directory: '/var/folders/hg/kw83c_j57xqd055hr739mhvm0000gn/T/sqldict27aa32'\n",
+      "ERROR:sqlitedict:failed to delete /var/folders/hg/kw83c_j57xqd055hr739mhvm0000gn/T/sqldict9cf695\n",
+      "Traceback (most recent call last):\n",
+      "  File \"//anaconda/lib/python2.7/site-packages/sqlitedict.py\", line 283, in terminate\n",
+      "    os.remove(self.filename)\n",
+      "OSError: [Errno 2] No such file or directory: '/var/folders/hg/kw83c_j57xqd055hr739mhvm0000gn/T/sqldict9cf695'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# train server (uses LSI and default dimensionality of 400 over a TF-IDF representation)\n",
+    "server.train(corpus, method='lsi')"
    ]
   },
   {
@@ -96,55 +110,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ERROR:sqlitedict:failed to delete /var/folders/hg/kw83c_j57xqd055hr739mhvm0000gn/T/sqldict76d91f\n",
+      "ERROR:sqlitedict:failed to delete /var/folders/hg/kw83c_j57xqd055hr739mhvm0000gn/T/sqldict3283db\n",
       "Traceback (most recent call last):\n",
       "  File \"//anaconda/lib/python2.7/site-packages/sqlitedict.py\", line 283, in terminate\n",
       "    os.remove(self.filename)\n",
-      "OSError: [Errno 2] No such file or directory: '/var/folders/hg/kw83c_j57xqd055hr739mhvm0000gn/T/sqldict76d91f'\n",
-      "ERROR:sqlitedict:failed to delete /var/folders/hg/kw83c_j57xqd055hr739mhvm0000gn/T/sqldict7e2bc8\n",
+      "OSError: [Errno 2] No such file or directory: '/var/folders/hg/kw83c_j57xqd055hr739mhvm0000gn/T/sqldict3283db'\n",
+      "ERROR:sqlitedict:failed to delete /var/folders/hg/kw83c_j57xqd055hr739mhvm0000gn/T/sqldictec1b65\n",
       "Traceback (most recent call last):\n",
       "  File \"//anaconda/lib/python2.7/site-packages/sqlitedict.py\", line 283, in terminate\n",
       "    os.remove(self.filename)\n",
-      "OSError: [Errno 2] No such file or directory: '/var/folders/hg/kw83c_j57xqd055hr739mhvm0000gn/T/sqldict7e2bc8'\n",
-      "ERROR:sqlitedict:failed to delete /var/folders/hg/kw83c_j57xqd055hr739mhvm0000gn/T/sqldict366a8d\n",
+      "OSError: [Errno 2] No such file or directory: '/var/folders/hg/kw83c_j57xqd055hr739mhvm0000gn/T/sqldictec1b65'\n",
+      "ERROR:sqlitedict:failed to delete /var/folders/hg/kw83c_j57xqd055hr739mhvm0000gn/T/sqldictcd8a95\n",
       "Traceback (most recent call last):\n",
       "  File \"//anaconda/lib/python2.7/site-packages/sqlitedict.py\", line 283, in terminate\n",
       "    os.remove(self.filename)\n",
-      "OSError: [Errno 2] No such file or directory: '/var/folders/hg/kw83c_j57xqd055hr739mhvm0000gn/T/sqldict366a8d'\n"
-     ]
-    }
-   ],
-   "source": [
-    "# train server (uses LSI and default dimensionality of 400 over a TF-IDF representation)\n",
-    "server.train(corpus, method='lsi')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:sqlitedict:failed to delete /var/folders/hg/kw83c_j57xqd055hr739mhvm0000gn/T/sqldict92d516\n",
-      "Traceback (most recent call last):\n",
-      "  File \"//anaconda/lib/python2.7/site-packages/sqlitedict.py\", line 283, in terminate\n",
-      "    os.remove(self.filename)\n",
-      "OSError: [Errno 2] No such file or directory: '/var/folders/hg/kw83c_j57xqd055hr739mhvm0000gn/T/sqldict92d516'\n",
-      "ERROR:sqlitedict:failed to delete /var/folders/hg/kw83c_j57xqd055hr739mhvm0000gn/T/sqldictb087e8\n",
-      "Traceback (most recent call last):\n",
-      "  File \"//anaconda/lib/python2.7/site-packages/sqlitedict.py\", line 283, in terminate\n",
-      "    os.remove(self.filename)\n",
-      "OSError: [Errno 2] No such file or directory: '/var/folders/hg/kw83c_j57xqd055hr739mhvm0000gn/T/sqldictb087e8'\n",
-      "ERROR:sqlitedict:failed to delete /var/folders/hg/kw83c_j57xqd055hr739mhvm0000gn/T/sqldictd0298d\n",
-      "Traceback (most recent call last):\n",
-      "  File \"//anaconda/lib/python2.7/site-packages/sqlitedict.py\", line 283, in terminate\n",
-      "    os.remove(self.filename)\n",
-      "OSError: [Errno 2] No such file or directory: '/var/folders/hg/kw83c_j57xqd055hr739mhvm0000gn/T/sqldictd0298d'\n"
+      "OSError: [Errno 2] No such file or directory: '/var/folders/hg/kw83c_j57xqd055hr739mhvm0000gn/T/sqldictcd8a95'\n"
      ]
     }
    ],
@@ -155,14 +135,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('18183', 1.0000001192092896, None),\n",
+       " ('12691', 0.9298461675643921, None),\n",
+       " ('18414', 0.8706507086753845, None),\n",
+       " ('18412', 0.845548689365387, None),\n",
+       " ('17351', 0.8358715176582336, None),\n",
+       " ('16392', 0.8268610835075378, None),\n",
+       " ('15734', 0.8127365708351135, None),\n",
+       " ('13911', 0.8093626499176025, None),\n",
+       " ('14625', 0.8076587915420532, None),\n",
+       " ('18413', 0.8020862936973572, None),\n",
+       " ('14913', 0.771027684211731, None),\n",
+       " ('16789', 0.7585797309875488, None),\n",
+       " ('17528', 0.740717351436615, None),\n",
+       " ('16449', 0.7386183142662048, None),\n",
+       " ('16766', 0.7303283214569092, None),\n",
+       " ('17246', 0.7225890755653381, None),\n",
+       " ('12600', 0.704534113407135, None),\n",
+       " ('13309', 0.6827985644340515, None),\n",
+       " ('17778', 0.5448945760726929, None),\n",
+       " ('15052', 0.5416157841682434, None),\n",
+       " ('17787', 0.5352489948272705, None),\n",
+       " ('12897', 0.47698116302490234, None),\n",
+       " ('18257', 0.4752431809902191, None),\n",
+       " ('13440', 0.4672621488571167, None),\n",
+       " ('12534', 0.45265477895736694, None)]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# query for similar documents\n",
-    "sim_result = server.find_similar('18183', max_results=100)"
+    "sim_result = server.find_similar('18183', max_results=25)\n",
+    "sim_result"
    ]
   },
   {
