save output to pickle

--- a/K_Means_Sandbox.ipynb
+++ b/K_Means_Sandbox.ipynb
@@ -12,7 +12,6 @@
     "from sklearn import metrics\n",
     "from sklearn.cluster import KMeans\n",
     "from sklearn.decomposition import PCA\n",
-    "from sklearn.preprocessing import scale\n",
     "from gensim import similarities\n",
     "import numpy as np"
    ]
@@ -48,28 +47,6 @@
    "outputs": [],
    "source": [
     "model_array = index.index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "rand_sample = np.random.randint(model_array.shape[0], size=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "model_sample = model_array[rand_sample,:]"
    ]
   },
   {
@@ -144,6 +121,45 @@
    ],
    "source": [
     "metrics.silhouette_score(reduced_data, km.labels_, metric='euclidean', sample_size=model_array.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.05262588,  0.12737633],\n",
+       "       [-0.00171633, -0.09883413],\n",
+       "       [-0.04486492,  0.03821679],\n",
+       "       ..., \n",
+       "       [-0.42677772, -0.103767  ],\n",
+       "       [ 0.36445373, -0.16060446],\n",
+       "       [-0.27718595, -0.09932234]], dtype=float32)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reduced_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pd.to_pi"
    ]
   }
  ],
